# Psihosomatica.API

./: .env  .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  gunicorn_conf.py  nginx.conf  pyproject.toml  start-reload.sh  start.sh
src/: alembic.ini  prestart.sh
src/alembic/: env.py
src/alembic/versions/: 2026-02-24_13-25_56e7596c32eb_add_user.py  2026-02-24_13-27_b926b230cb75_delete_birthdate.py  2026-03-03_13-37_df98465bab62_add_stage_lesson_task.py  2026-03-05_11-46_7d97c9615407_update_foreign_keys.py  2026-03-06_07-15_eb0f4819c8bc_update_ondelete.py  2026-03-06_07-17_afd07defaa60_update_nullable_id.py  2026-03-10_07-07_a4efdd14ac1f_add_stories.py  2026-03-11_08-05_c33d3afc2e47_update_stories.py  2026-03-12_09-51_4058ebc3ae14_add_premium_accounts_and_settings.py
src/app/: config.py  deps.py  errors.py  exceptions.py  main.py  prestart.py
src/app/api/: __init__.py
src/app/crud/: __init__.py  async_base.py  crud_comment.py  crud_hashtag.py  crud_lesson.py  crud_payment.py  crud_settings.py  crud_stage.py  crud_story.py  crud_story_attachment.py  crud_story_report.py  crud_task.py  crud_user.py  crud_verification_code.py
src/app/enums/: __init__.py  gender.py  reaction.py  type_answer.py
src/app/getters/: __init__.py  comment.py  hashtag.py  lesson.py  settings.py  stage.py  story.py  story_attachment.py  story_report.py  task.py  timestamp.py  universal.py  users.py
src/app/models/: __init__.py  base_model.py  comment.py  device.py  favorite_story.py  firebase_token.py  hashtag.py  hug.py  lesson.py  payment.py  (+14 more)
src/logs/: config.py
(+36 files in other folders)
